...
        NSLayoutConstraint.activate([
            webView.leadingAnchor.constraint(equalTo: view.leadingAnchor),
            webView.trailingAnchor.constraint(equalTo: view.trailingAnchor),
            webView.bottomAnchor.constraint(equalTo: view.bottomAnchor),
            webView.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor)
        ])
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }
    
    private func configureProgressView(for progressView: UIProgressView) {
        progressView.progressTintColor = .ypBlack
        view.addSubview(progressView)
...
