...
            dataLabel.leadingAnchor.constraint(equalTo: photoView.leadingAnchor, constant: 8),
            dataLabel.heightAnchor.constraint(equalToConstant: 18)
        ])
        
        likeButton.addTarget(self, action: #selector(likeButtonTapped), for: .touchUpInside)
        contentView.bringSubviewToFront(likeButton)
        likeButton.accessibilityIdentifier = "like button"
    }
    
    // MARK: - Delegate
    weak var delegate: ImagesListCellDelegate?
    
    // MARK: - Init
...
